Additional plotting features and new sliders. Updated Librir interface.

--- a/skins/dark/stylesheet.css
+++ b/skins/dark/stylesheet.css
@@ -422,6 +422,11 @@ QTreeView::branch:closed:has-children {
     image: url(skins/dark/icons/right.png);
 }
 
+QTableView
+{
+    gridline-color: white;
+}
+
 QPushButton {
    border: 1px solid #3D3D3D;
    border-radius: 3px;
