Minor correctoins for Linux. Switched to C++17, mandatory for Qt6.

--- a/skins/dark/stylesheet.css
+++ b/skins/dark/stylesheet.css
@@ -21,6 +21,9 @@ QMainWindow::separator:hover {
 	  
 }   
 
+/*QSlider::handle:horizontal {
+	background: grey;
+}*/
 
 VipTitleBar {  
 	margin: 5px;
