Extracting time traces from video player now only block the parent workspace instead of the full GUI (see VipProgressWidget class). Corrected VipPhysicalFileSystem::exists_timeout used to detect drive letters Renamed VipProcessingObject::setVisible to VipProcessingObject::setProcessingVisible Added colormaps 'RevealIR' and 'Visible' Added VipConcatenateVideos generator. Removed the possibility to dra & drop from menus between different workspaces Added VipAsyncMimeDataLazyEvaluation class for asynchronous drag & drop Removed unused commented code everywhere

--- a/skins/dark/stylesheet.css
+++ b/skins/dark/stylesheet.css
@@ -103,6 +103,14 @@ VipToolWidgetTitleBar > QToolButton{
 }
 
 
+VipProgressWidget {
+	background-color: rgba(31,31,31,50);
+}
+VipProgressWidgetInternal {
+	background-color: rgba(31,31,31,150);
+	margin: 10px;
+}
+
 
 VipViewport {
 	background-color: #303030;
